--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.5",
+    "mongoose": "^6.3.0",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "razorpay": "^2.8.1",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
   }
